fix for avr-x2100w

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "denon-microservice",
   "version": "1.0.0",
-  "description": "autodomo MQTT microservice to control and get status of Denon AVRs",
+  "description": "robodomo MQTT microservice to control and get status of Denon AVRs",
   "main": "index.js",
   "scripts": {
     "start": "forever ./index.js",
@@ -9,11 +9,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/autodomo/denon-microservice.git"
+    "url": "git+https://github.com/robodomo/denon-microservice.git"
   },
   "keywords": [
     "Denon",
-    "autodomo",
+    "robodomo",
     "Home",
     "Automation",
     "MQTT"
@@ -21,12 +21,12 @@
   "author": "Michael Schwartz",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/autodomo/denon-microservice/issues"
+    "url": "https://github.com/robodomo/denon-microservice/issues"
   },
-  "homepage": "https://github.com/autodomo/denon-microservice#readme",
+  "homepage": "https://github.com/robodomo/denon-microservice#readme",
   "dependencies": {
     "debug": "^2.6.8",
-    "microservice-core": "github:autodomo/microservice-core",
+    "microservice-core": "github:robodomo/microservice-core",
     "mqtt": "^2.11.0"
   }
 }
