--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,7 @@
-node_modules
-.gitignore
-.git
-.DS_Store
-README.md
-examples
+**/node_modules
+**/.gitignore
+**/.git
+**/.DS_Store
+**/README.md
+**/examples
+**/docs
